--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,13 +26,16 @@ dependencies:
   sqflite: ^1.3.1
   path_provider: ^1.6.11
   intl: ^0.16.1
-
-
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  flutter_launcher_icons: "^0.7.2"
+
+flutter_icons:
+    android: true
+    ios: true
+    image_path: "icon2.jpg"
+
 
 dev_dependencies:
   flutter_test:
